fix overflow in messages

--- a/app/assets/stylesheets/chatrooms.scss
+++ b/app/assets/stylesheets/chatrooms.scss
@@ -88,7 +88,7 @@
   display: flex;
   justify-content: center;
   align-self: center;
-  overflow-x: scroll;
+  padding: 2px;
 }
 
 .chatroom_delete_button {
