--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -75,9 +75,8 @@
   font-size: 0.70rem;
 }
 
-.message_body_button {
-  display: flex;
-  justify-content: space-between;
+.message_wrapper {
+  width: 85%;
 }
 
 .message_body {
